syntax = "proto3";
package tvShow;
// Définition du message TV show
message TVShow {
string id = 1;
string title = 2;
string description = 3;
// Ajouter d'autres champs de données pour les séries TV au besoin
}
// Définition des messages de requête et de réponse pour les méthodes
message GetTVShowRequest {
string tv_show_id = 1;
}
message GetTVShowResponse {
TVShow tv_show = 1;
}
message SearchTVShowsRequest {
string query = 1;
}
message SearchTVShowsResponse {
repeated TVShow tv_shows = 1;
}
// Définition du service de séries TV
service TVShowService {
rpc GetTvshow(GetTVShowRequest) returns (GetTVShowResponse);
rpc SearchTvshows(SearchTVShowsRequest) returns (SearchTVShowsResponse);
// Ajouter d'autres méthodes au besoin
}